--- a/applications/solvers/multiphase/compressibleInterFoam/libs/TnbCompressibleInterFoamLibs.vcxproj
+++ b/applications/solvers/multiphase/compressibleInterFoam/libs/TnbCompressibleInterFoamLibs.vcxproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -19,38 +19,38 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
-    <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ee33d8af-249e-4dea-bb2b-eb936af6575e}</ProjectGuid>
-    <RootNamespace>driftFluxFoam</RootNamespace>
+    <VCProjectVersion>15.0</VCProjectVersion>
+    <ProjectGuid>{63FC6DE6-0591-4D82-979A-01827A6DBE5E}</ProjectGuid>
+    <RootNamespace>TnbCompressibleInterFoamLibs</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <ProjectName>TnbCompressibleInterFoamLibs</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -70,135 +70,115 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LinkIncremental>true</LinkIncremental>
+    <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\module;$(ProjectDir)TnbLib\surfaceTensionModels\liquidProperties;$(ProjectDir)TnbLib\twoPhaseMixtureThermo;$(ProjectDir)TnbLib\VoFphaseCompressibleTurbulenceModels;$(SolutionDir)TnbFvOptions\include;$(SolutionDir)TnbRadiationModels\include;$(SolutionDir)TnbLagrangian\include;$(SolutionDir)TnbConversion\include;$(SolutionDir)TnbSampling\include;$(SolutionDir)TnbTurbulence\include;$(SolutionDir)TnbTransportModels\include;$(SolutionDir)TnbThermoPhysicalModels\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>FoamCompressibleInterFoamLibs_EXPORT_DEFINE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+    </Link>
+    <PostBuildEvent>
+      <Command>if not exist "$(SolutionDir)include" mkdir "$(SolutionDir)include"
+if not exist "$(ProjectDir)include" mkdir "$(ProjectDir)include"
+for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(SolutionDir)include" /y
+for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)include" /y
+for /r "$(ProjectDir)tnbLib" %%f in (*.lxx) do @xcopy "%%f" "$(SolutionDir)include" /y</Command>
+    </PostBuildEvent>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)/incompressibleTwoPhaseInteractingMixture;$(ProjectDir)/mixtureViscosityModels/BinghamPlastic;$(ProjectDir)/mixtureViscosityModels/mixtureViscosityModel;$(ProjectDir)/mixtureViscosityModels/plastic;$(ProjectDir)/mixtureViscosityModels/slurry;$(ProjectDir)/relativeVelocityModels/general;$(ProjectDir)/relativeVelocityModels/relativeVelocityModel;$(ProjectDir)/relativeVelocityModels/simple;$(ProjectDir);$(SolutionDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\module;$(ProjectDir)TnbLib\surfaceTensionModels\liquidProperties;$(ProjectDir)TnbLib\twoPhaseMixtureThermo;$(ProjectDir)TnbLib\VoFphaseCompressibleTurbulenceModels;$(SolutionDir)TnbFvOptions\include;$(SolutionDir)TnbRadiationModels\include;$(SolutionDir)TnbLagrangian\include;$(SolutionDir)TnbConversion\include;$(SolutionDir)TnbSampling\include;$(SolutionDir)TnbTurbulence\include;$(SolutionDir)TnbTransportModels\include;$(SolutionDir)TnbThermoPhysicalModels\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>FoamCompressibleInterFoamLibs_EXPORT_DEFINE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="alphaControls.lxx" />
-    <None Include="alphaEqn.lxx" />
-    <None Include="alphaEqnSubCycle.lxx" />
-    <None Include="createFields.lxx" />
-    <None Include="pEqn.lxx" />
-    <None Include="UEqn.lxx" />
+    <ClInclude Include="TnbLib\module\compressibleInterFoamLibs_Module.hxx" />
+    <ClInclude Include="TnbLib\surfaceTensionModels\liquidProperties\liquidPropertiesSurfaceTension.hxx" />
+    <ClInclude Include="TnbLib\twoPhaseMixtureThermo\twoPhaseMixtureThermo.hxx" />
+    <ClInclude Include="TnbLib\VoFphaseCompressibleTurbulenceModels\compressibleInterPhaseTransportModel.hxx" />
+    <ClInclude Include="TnbLib\VoFphaseCompressibleTurbulenceModels\VoFphaseCompressibleTurbulenceModel.hxx" />
+    <ClInclude Include="TnbLib\VoFphaseCompressibleTurbulenceModels\VoFphaseCompressibleTurbulenceModelFwd.hxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="compressibleTurbulenceModels.cxx" />
-    <ClCompile Include="driftFluxFoam.cxx" />
-    <ClCompile Include="incompressibleTwoPhaseInteractingMixture\incompressibleTwoPhaseInteractingMixture.cxx" />
-    <ClCompile Include="mixtureViscosityModels\BinghamPlastic\BinghamPlastic.cxx" />
-    <ClCompile Include="mixtureViscosityModels\mixtureViscosityModel\mixtureViscosityModel.cxx" />
-    <ClCompile Include="mixtureViscosityModels\mixtureViscosityModel\mixtureViscosityModelNew.cxx" />
-    <ClCompile Include="mixtureViscosityModels\plastic\plastic.cxx" />
-    <ClCompile Include="mixtureViscosityModels\slurry\slurry.cxx" />
-    <ClCompile Include="relativeVelocityModels\general\general.cxx" />
-    <ClCompile Include="relativeVelocityModels\relativeVelocityModel\relativeVelocityModel.cxx" />
-    <ClCompile Include="relativeVelocityModels\simple\simple.cxx" />
+    <ClCompile Include="TnbLib\surfaceTensionModels\liquidProperties\liquidPropertiesSurfaceTension.cxx" />
+    <ClCompile Include="TnbLib\twoPhaseMixtureThermo\twoPhaseMixtureThermo.cxx" />
+    <ClCompile Include="TnbLib\VoFphaseCompressibleTurbulenceModels\compressibleInterPhaseTransportModel.cxx" />
+    <ClCompile Include="TnbLib\VoFphaseCompressibleTurbulenceModels\VoFphaseCompressibleTurbulenceModels.cxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="incompressibleTwoPhaseInteractingMixture\incompressibleTwoPhaseInteractingMixture.hxx" />
-    <ClInclude Include="mixtureViscosityModels\BinghamPlastic\BinghamPlastic.hxx" />
-    <ClInclude Include="mixtureViscosityModels\mixtureViscosityModel\mixtureViscosityModel.hxx" />
-    <ClInclude Include="mixtureViscosityModels\plastic\plastic.hxx" />
-    <ClInclude Include="mixtureViscosityModels\slurry\slurry.hxx" />
-    <ClInclude Include="relativeVelocityModels\general\general.hxx" />
-    <ClInclude Include="relativeVelocityModels\relativeVelocityModel\relativeVelocityModel.hxx" />
-    <ClInclude Include="relativeVelocityModels\simple\simple.hxx" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\TnbBase\TnbBase.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbBase\TnbBase.vcxproj">
       <Project>{0eaecc55-7ec6-4414-897b-0156a774c01c}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbDynamicMesh\TnbDynamicMesh.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbDynamicMesh\TnbDynamicMesh.vcxproj">
       <Project>{e3788c5b-0066-49ce-a6f3-4ef1a5660b6d}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbFiniteVolume\TnbFiniteVolume.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbFiniteVolume\TnbFiniteVolume.vcxproj">
       <Project>{5845ec09-4e08-49f8-a805-f71c9cdde696}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbFvMesh\TnbFvMesh.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbFvMesh\TnbFvMesh.vcxproj">
       <Project>{c5b9d5f2-4a73-47cd-85e1-65bc340bc2c2}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbFvOptions\TnbFvOptions.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbFvOptions\TnbFvOptions.vcxproj">
       <Project>{be9daf5d-75b5-4744-b7d4-fb8a1a2150ca}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbLagrangian\TnbLagrangian.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbLagrangian\TnbLagrangian.vcxproj">
       <Project>{27928553-74af-4229-b18c-4f7670767702}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbSampling\TnbSampling.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbSampling\TnbSampling.vcxproj">
       <Project>{b0600bfc-62b5-4f92-9e5a-5b25fd93436a}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbThermoPhysicalModels\TnbThermoPhysicalModels.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbThermoPhysicalModels\TnbThermoPhysicalModels.vcxproj">
       <Project>{5396b04c-6e67-4ee2-82f8-e56d26195cf9}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbTransportModels\TnbTransportModels.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbTransportModels\TnbTransportModels.vcxproj">
       <Project>{ad4b123c-0d2b-4aac-b265-9ec2f0e93568}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\TnbTurbulence\TnbTurbulence.vcxproj">
+    <ProjectReference Include="..\..\..\..\..\TnbTurbulence\TnbTurbulence.vcxproj">
       <Project>{c44b171d-747f-4fe0-b6e9-b8c6c88ddc40}</Project>
     </ProjectReference>
   </ItemGroup>
